# kandiga

./: .gitignore  LICENSE  README.md  chat.sh  chat_dual.py  chat_server.py  linkedin-post-2.md  pyproject.toml  setup.cfg  setup.py
kandiga/: __init__.py  __main__.py  _build.py  _pack_experts.py  _split_experts.py  _update.py  bench.py  chat.py  cli.py  engine.py  full_forward_engine.py  fused_attn.py  kv_compress.py  metal_kernels.py  serve.py  setup.py
kandiga/agents/: __init__.py  agent_chat.py  agent_loop.py  agent_serve.py  auto_skills.py  browser.py  cloud.py  dual_engine.py  json_repair.py  macos.py  mcp_client.py  memory.py  messaging.py  pipeline.py  protocol.py  scheduler.py  skills.py  state.py  tools.py  vision.py
kandiga/metal/: Makefile  attention.metal  attention_lg.m  bakan_forward.h  expert_mlp.metal  full_forward.h  full_forward_lg.m  kandiga_cpu_expert.h  kandiga_cpu_expert.m  kandiga_cpu_expert_lg.m  metal_attn_lg.m  moe_block.metal
kandiga/static/: agent.html
kandiga/tools/: __init__.py
kandiga/tq3/: __init__.py  convert.py  convert_experts.py  engine.py  fused_kernel.py  integrate.py  loader.py  metal_runner.py  mlx_patch.py  quantize.py  tq3_metal.metal
scripts/: convert_3bit.py  convert_mixed.py  install.sh  repack_experts_3bit.py  setup_gemma4.py
tests/: test_agents.py  test_cli.py  test_engine.py  test_kv_compress.py  test_pack.py
