[project]
name = "kandiga"
version = "0.3.0"
description = "Run frontier MoE models on consumer hardware. 35B in 1.5GB RAM."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Kantheon"}]
dependencies = [
    "mlx>=0.30.0",
    "mlx-lm>=0.24.0",
    "numpy",
    "rich",
]

[project.urls]
Homepage = "https://kandiga.com"
Repository = "https://github.com/kantheon/kandiga"
Documentation = "https://github.com/kantheon/kandiga#readme"

[project.optional-dependencies]
serve = ["fastapi", "uvicorn[standard]"]
tools = ["duckduckgo-search"]

[project.scripts]
kandiga = "kandiga.cli:main"

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kandiga*"]

[tool.setuptools.package-data]
kandiga = ["metal/*.h", "metal/*.m", "metal/Makefile", "metal/*.dylib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
