[metadata]
name = kandiga
version = 0.1.0
description = Run 35B AI models in 1.5GB of RAM. Any Mac.
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    mlx>=0.30.0
    mlx-lm>=0.24.0
    numpy
    rich

[options.extras_require]
serve = fastapi; uvicorn[standard]
tools = duckduckgo-search

[options.entry_points]
console_scripts =
    kandiga = kandiga.cli:main
